--- a/scene.html
+++ b/scene.html
@@ -53,14 +53,38 @@
                 </div>
             </div>
             -->
-            <ul class="sceneMsg">
-                <li class="type">票型ID</li>
-                <li class="type">票型名称</li>
-                <li class="explation">购买说明</li>
-                <li class="cost1">门市价</li>
-                <li class="cost2">网购价</li>
-            </ul>
             <div class="clear"></div>
+            <!--
+            <div class="scenePart">
+                <div class="sceneTitle">
+                    <img src="images/suzhou.jpg">
+                    <div class="introduction">
+                        <h2>票型名称<label>&lt;分销商&gt;</label></h2>
+                        <label>特殊说明</label>
+                        <p>江苏省苏州市新区玉山路156号</p>
+                        <b>开园时间:9:00-17:00</b>
+                    </div>
+                    <p class="lowestPrice">¥<span class="myPrice">90</span><span class="myPriceqi">起</span></p>
+                </div>
+                <ul class="sceneMsg">
+                    <li class="type">票型名称</li>
+                    <li class="explation">购买说明</li>
+                    <li class="cost1">门市价</li>
+                    <li class="cost2">网购价</li>
+                </ul>
+                <ul class="sceneDMsg">
+                    <li class="type"><a href="">九天山滑雪周内不限时</a></li>
+                    <li class="explation">需在2016/2/4 20:44:56至2018/2/4 20:44:56期间完成使用啦啦啦啦啦啦啦啦啦啦啦啦啦爱啦啦啦绿啦啦绿啦奥绿绿绿绿绿绿绿啦啦啦啦啦啦啦啦啦啦啦啦啦</li>
+                    <li class="cost1">￥158</li>
+                    <li class="cost2 red">￥90</li>
+                    <li class="buy">
+                        <button value="">购买</button>
+                    </li>
+                </ul>
+            </div>
+            <div class="clear line"></div>
+            -->
+
             <!--
             <ul class="sceneDMsg">
                 <li class="type"><a href="">欢乐世界</a></li>
