--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="keywords" content="">
     <meta http-equiv="description" content="">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-    <script type="text/javascript"  src="js/jquery.js"></script>
+    <script type="text/javascript"  src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript"  src="js/cookie.js"></script>
   </head>
   <body>
