--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="author" content="duanliang, duanliang920.com" />
     <link rel="stylesheet"	 href="css/base.css" />
-    <script type="text/javascript"  src="js/jquery.js"></script>
+    <script type="text/javascript"  src="js/jquery-2.1.1.min.js"></script>
     <script src="js/Load.js"></script>
     <script src="js/cookie.js"></script>
     <style>
