--- a/scene.html
+++ b/scene.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Scene</title>
     <link rel='stylesheet' href='css/base.css'>
-    <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/cookie.js"></script>
     <script src="js/dataone2.js"></script>
     <script src="js/book.js"></script>
